Change to static header and fix footer for overflow
Overflow fix by adding a background color to footer container. Makes color extend to bottom of window regardless of the number of rows in the footer text.

--- a/css/shapbio.css
+++ b/css/shapbio.css
@@ -17,7 +17,9 @@ slate grey: #747C95
 /* Basic customization
 ------------------------------------------------- */
 
-
+.page-header{
+  margin: 23px 0;
+}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -36,33 +38,29 @@ body {
   /* Negative indent footer by its height */
   margin: 0 auto -60px;
   /* Pad bottom by footer height */
-  padding: 0 0 80px;
+  padding: 0 0 60px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 80px;
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
-/* Lastly, apply responsive CSS fixes as necessary */
-@media (max-width: 767px) {
-  #footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-}
 
 
 #wrap > .container {
-  padding: 80px 15px 0;
+  padding: 0 15px;
 }
 .container .credit {
   margin: 20px 0;
   font-size: 80%;
 }
-
+#footer > .container {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #f5f5f5; /* Extend color down if compressed */
+}
 
 /* Figure Formatting
 ---------------------------------------------------- */
